style.css
/* ... */
.img-8-a {
  background-image: url(https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2020/01/Snag_2267466a.png);
}

.article-header {
  padding-top: 10px;
  padding-left: 10px;
  line-height: 1.2;
  color: rgb(255, 68, 34);
  background-color: rgba(255, 68, 34, 0.06);
  font-size: 14px;
}

.article-header p {
  margin-top: 5px;
  font-weight: 700;
}

.article-ul {
  padding-left: 18px;
  list-style-type: disc;
  color: rgb(255, 68, 34);
}

.article-li {
  border-bottom: 1px solid #555;
  padding: 5px 0;
}

.article-li a {
  color: #555;
  font-size: 13px;
  line-height: 1.7;
}

.deals {
  max-width: 1150px;
  margin: 2rem auto;
  padding-left: 20px;
  padding-right: 20px;
}

.deals-grid {
  display: grid;
  grid-gap: 20px;
  grid-template-areas:
    'box-1 box-2 box-3 box-4'
    'box-5 box-6 box-7 box-8';
}

.deals-header {
  color: rgb(255, 68, 34);
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.deals-header a {
  color: rgb(255, 68, 34);
}

.box-1 {
  grid-area: box-1;
}

.box-2 {
  grid-area: box-2;
}

.box-3 {
  grid-area: box-3;
}

.box-4 {
  grid-area: box-4;
}

.box-5 {
  grid-area: box-5;
}

.box-6 {
  grid-area: box-6;
}

.box-7 {
  grid-area: box-7;
}

.box-8 {
  grid-area: box-8;
}

.deals-grid img {
  height: 100%;
  width: 100%;
  max-height: 200px;
  max-width: 270px;
}

.footer1 {
  height: 162px;
  background-color: rgb(26, 26, 26);
}

.footer-social {
  color: white;
  width: 450px;
  padding-top: 25px;
  text-align: center;
  margin: 0 auto;
}

.footer-social i {
  padding: 10px;
}

.footer1-ul-container {
  background-color: rgb(26, 26, 26);
  width: 450px;
  margin: 40px auto;
  text-align: center;
}

.footer1-ul-container li {
  display: inline-block;
  list-style-type: none;
  font-size: 12px;
  padding: 5px;
}

.footer1-ul-container li a {
  color: white;
}

.footer2 {
  height: 100px;
  background-color: rgb(0, 0, 0);
  display: flex;
  justify-content: center;
  align-items: center;
}

.footer2 img {
  max-width: 100%;
}

.search-bar-left li a {
  color: rgb(184, 179, 179);
}

.nav-left li:hover,
.nav-right li:hover {
  line-height: 2;
  color: rgb(231, 230, 230);
}

.article-li a:hover {
  color: black;
}

.grid-articles h2:hover {
  color: black;
  cursor: pointer;
}

.icons-aside span:hover {
  color: rgb(202, 27, 27);
}

.latest-fundings-header h1:hover {
  cursor: pointer;
  color: rgb(0, 0, 0);
}

.add-more-class li:hover {
  color: rgb(0, 0, 0);
  white-space: nowrap;
  cursor: pointer;
  transform: scale(1.07);
}

.article-text a:hover {
  color: #555;
}

.article-text h2:hover {
  cursor: pointer;
  color: rgb(255, 68, 34);
}

.latest-news-header a:hover {
  color: rgb(0, 0, 0);
}

.footer1-ul-container li a:hover {
  color: rgb(98, 98, 98);
}

.search-bar-left li a:hover {
  color: black;
}

/* Large breakpoint */
@media screen and (max-width: 1200px) {
  .li-readme {
    display: none;
  }
}

/* Medium breakpoint */
@media screen and (max-width: 1024px) {
  .logo-overlay {
    display: none;
  }

  .logo-container {
    display: block;
    padding-top: 30px;
  }

  .last-div {
    display: none;
  }

  .aside-box {
    width: 32%;
  }

  .latest-fundings-header {
    display: block;
  }

  .deals-grid {
    grid-template-areas:
      'box-1 box-2 box-3'
      'box-4 box-5 box-6'
      'box-7 box-8 .';
  }
}

/* Optional breakpoint */
@media screen and (max-width: 820px) {
  .nav-right {
    display: none;
  }
}

/* Small breakpoint */
@media screen and (max-width: 767px) {
  nav {
    display: none;
  }

  .logo-container {
    height: 48px;
    padding-top: 15px;
  }

  .search-bar {
    justify-content: flex-end;
  }

  .search-bar-left {
    display: none;
  }

  .hidden-icon {
    display: inline-block;
  }

  .cover-section {
    height: 400px;
    grid-template-areas:
      'a a a a a'
      'b b b b b'
      'c c c c c';
  }

  .grid-container {
    grid-template-columns: 1fr;
  }

  .grid-articles {
    display: flex;
  }

  .grid-articles img {
    width: 75px;
    height: 75px;
  }

  .aside-div-container {
    display: block;
  }

  .aside-div-container div {
    width: 100%;
  }

  .related-articles {
    grid-template-columns: 1fr;
    grid-auto-rows: auto;
  }

  .related-articles .grid-articles {
    display: block;
  }

  .related-articles-img {
    max-width: 100%;
    height: 531px;
    max-height: 100%;
  }

  .article-header {
    width: 100%;
  }

  .deals-grid {
    display: flex;
    flex-direction: column;
  }

  .deals-grid div {
    display: flex;
  }

  .deals-grid img {
    width: 75px;
    height: 75px;
    padding: 0 10px;
    margin-bottom: 10px;
  }

  .box-title-and-price {
    display: flex;
    flex-direction: column;
  }

  .deals-grid p {
    width: 100%;
  }

  section, .latest-fundings {
    width: 100%;
    box-sizing: border-box;
    padding-left: 20px;
    padding-right: 20px;
  }
}

